policies/templates/gcp_gke_enable_private_endpoint.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-gke-enable-private-endpoint-v1
spec:
  crd:
    spec:
      names:
        kind: GCPGKEEnablePrivateEndpointConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}

  targets:
   validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/gke_enable_private_endpoint.rego")
            #
            # Copyright 2018 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPGKEEnablePrivateEndpointConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	lib.get_constraint_params(constraint, params)
            
            	asset := input.asset
            	asset.asset_type == "container.googleapis.com/Cluster"
            	cluster := asset.resource.data
            
            	not_private_endpoint(cluster)
            
            	message := sprintf("%v has private endpoint disabled", [asset.name])
            	metadata := {"resource": asset.name}
            }
            
            not_private_endpoint(cluster) {
            	private_cluster_config := lib.get_default(cluster, "privateClusterConfig", {})
            	enable_private_endpoint := lib.get_default(private_cluster_config, "enablePrivateEndpoint", false)
            	enable_private_endpoint != true
            }
            #ENDINLINE
